Fixed database query errors